--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -6,7 +6,7 @@ body {
 
 body {
  color: #211f1e ;
- background: url(/img/webpicheroheader1.jpg) no-repeat center center fixed; 
+ background: url(/assets/img/webpicheroheader1.jpg) no-repeat center center fixed; 
  background-size: cover;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif; 
 }
